--- a/src/Launcher/wwwroot/sys/juicy-tile-list/test/declarative_setup/juicy-style_attribute.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/test/declarative_setup/juicy-style_attribute.html
@@ -22,32 +22,43 @@
 <body>
 
     <!-- You can use the document as a place to set up your fixtures. -->
-    <juicy-tile-list id="list1">
-        <div juicy-style="width:100%; height: 50;">
-            <div>0 -
-                <code>width: 100%; height: 50;</code>
-            </div>
-        </div>
-        <div juicy-style="precalculateWidth: 1; precalculateHeight: 0; height: 100;">
-            <div style="height:50px; width: 250px;">1 -
-                <code>height:50px; width: 250px;</code>
-            </div>
-        </div>
-        <div juicy-style="width:100%; height: 100;">
-            <div>2 - setup overwrites with
-                <code>height:50px; width: 250px;</code>
-            </div>
-        </div>
-    </juicy-tile-list>
+    <test-fixture id="list">
+        <template>
+            <juicy-tile-list>
+                <div juicy-style="width:100%; height: 50;">
+                    <div>0 -
+                        <code>width: 100%; height: 50;</code>
+                    </div>
+                </div>
+                <div juicy-style="precalculateWidth: 1; precalculateHeight: 0; height: 100;">
+                    <div style="height:50px; width: 250px;">1 -
+                        <code>height:50px; width: 250px;</code>
+                    </div>
+                </div>
+                <div juicy-style="width:100%; height: 100;">
+                    <div>2 - setup overwrites with
+                        <code>height:50px; width: 250px;</code>
+                    </div>
+                </div>
+                <!-- CSS-like px=> number -->
+                <div juicy-style="width:100px; height: 50px;">
+                    <div>3 - px => fixed
+                        <code>width: 100px; height: 50px; </code>
+                    </div>
+                </div>
+            </juicy-tile-list>
+        </template>
+    </test-fixture>
 
     <script>
         /**
          * JuicyTiles tests
          */
-        var juicyTileList = document.getElementById('list1');
-        describe('juicy-tile-list precalculate size', function() {
+        var juicyTileList;
+        describe('juicy-tile-list declarative per-element setup', function() {
             var initialSetup
-            before(function() {
+            before(function(done) {
+                juicyTileList = fixture('list');
                 initialSetup = {
                     width: 500,
                     items: [{
@@ -59,7 +70,7 @@
                 };
                 juicyTileList.setup = JSON.parse(JSON.stringify(initialSetup));
                 juicyTileList.style.width = initialSetup.width + "px";
-                juicyTileList.setupChanged();
+                setTimeout(function waitForAttached(){done();});
             });
             // TODO (tomalec) clean types and strickt equality
             it('tile with `height` and `width` given in `juicy-style` attribute, should get it in it\'s setup', function() {
@@ -76,6 +87,11 @@
             it('tile with `height` and `width` given in `juicy-style` attribute, and setup given in parent\'s JSON, should end up with JSON\'s setup', function() {
                 expect(juicyTileList.allItems[2].width).to.equal(250);
                 expect(juicyTileList.allItems[2].height).to.equal(50);
+            });
+
+            it('`px` given in `juicy-style` attribute, should be treated as just a number in tile\'s setup', function() {
+                assert(juicyTileList.allItems[3].width == 100);
+                assert(juicyTileList.allItems[3].height == 50);
             });
         });
     </script>
