--- a/src/Launcher/wwwroot/sys/juicy-tile-list/test/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/test/index.html
@@ -10,6 +10,7 @@
     <!-- if we use WCT suites, it is loaded per suite -->
     <link rel="import" href="../src/juicy-tile-list.html">
 
+
     <script src="rectangleSpec.js"></script>
     <script src="packerSpec.js"></script>
     <script src="packageSpec.js"></script>
@@ -28,7 +29,8 @@
           'refresh/onAttached.html',
           'refresh/onSetupChange.html',
           'directions.html',
-          'precalculate.html'
+          'precalculate.html',
+          'declarative_setup/juicy-style_attribute.html'
         ]);
     </script>
 </body>
